T1-473 Fix more spacing

--- a/src/client/components/molecules/callout/callout.scss
+++ b/src/client/components/molecules/callout/callout.scss
@@ -11,10 +11,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
 
-    > a:not(:last-child),
-    button:not(:last-child) {
-      margin-bottom: $small-spacing;
-    }
+  *[class~='button']:not(:last-child) {
+    margin-bottom: $small-spacing;
   }
 }
